# ReactNativeSample

./: App.tsx  README.md  package.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/reactnativesample/: MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
ios/ReactNativeSample/: AppDelegate.mm  Info.plist
ios/ReactNativeSample.xcodeproj/: project.pbxproj
src/components/: SampleText.tsx
tm/: CMakeLists.txt  NativeRTNBase64Helper.ts  RTNBase64HelperModule.cpp  RTNBase64HelperModule.h
